force-app/main/default/objects/SDO_Community_Course_Enrollment__c.object
<CustomObject>
    <description>What: Represents enrollment of a Contact in a training course. Used to facilitate enrollment flows in a community.
Who: Joe Morse &amp; Community Team</description>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Enrolled_User__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Salesforce ID of the contact (if any) representing the enrolled user.</inlineHelpText>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_s_Enrollment__c</fullName>
        <description>Returns TRUE when the currently logged-in user is the one enrolled in the course. Used to filter list views, such as to &apos;My Courses&apos;</description>
        <formula>Enrolled_User__r.Id = $User.Id</formula>
        <inlineHelpText>Returns TRUE when the currently logged-in user is the one enrolled in the course.</inlineHelpText>
        <label>Current User&apos;s Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User record of the enrollee.</inlineHelpText>
        <label>Enrolled User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an internal, customer, or partner user to enroll.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDO_Community_Training_Course_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <inlineHelpText>Which training course is this enrollment for?</inlineHelpText>
        <label>Training Course</label>
        <referenceTo>SDO_Community_Training_Course__c</referenceTo>
        <relationshipLabel>Enrollment</relationshipLabel>
        <relationshipName>Course_Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Course Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Training_Course__c</columns>
        <columns>Enrolled_User__c</columns>
        <columns>Enrollment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Enrollments</fullName>
        <columns>NAME</columns>
        <columns>Training_Course__c</columns>
        <columns>Enrollment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_User_s_Enrollment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Enrollments</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>